[gd_scene load_steps=2 format=3 uid="uid://smn78wo83uln"]

[ext_resource type="Script" path="res://ui/aquarium_panel/aquarium_values_container/aquarium_value_display_container/aquarium_value_display.gd" id="1_8oab1"]

[node name="AquariumValueDisplay" type="VBoxContainer"]
script = ExtResource("1_8oab1")

[node name="DisplayNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Ox"

[node name="ValueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "100%
"
